Add gmock lib to Message lib

--- a/Message/CMakeLists.txt
+++ b/Message/CMakeLists.txt
@@ -8,5 +8,5 @@ target_include_directories(Message INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(Message project_warnings)
 
 add_executable(Message_tests Message_tests.cpp)
-target_link_libraries(Message_tests gtest_main project_warnings Message)
+target_link_libraries(Message_tests gtest_main gmock project_warnings Message)
 add_test(NAME Message COMMAND Message_tests)
