--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.10)
 set(CMAKE_INSTALL_PREFIX outputs)
 set_property(GLOBAL PROPERTY USE_FOLDERS On)
 
-project(All VERSION 1.0)
+project(AndySaul VERSION 1.0)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
 
