--- a/Widget/CMakeLists.txt
+++ b/Widget/CMakeLists.txt
@@ -7,6 +7,6 @@ add_library(Widget ${SOURCES} ${HEADER_FILES})
 target_include_directories(Widget INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(Widget project_warnings)
 
-add_executable(Widget_tests Widget_tests.cpp)
+add_executable(Widget_tests Widget_tests.cpp Gadget_tests.cpp)
 target_link_libraries(Widget_tests gtest_main gmock project_warnings Widget)
 add_test(NAME Widget COMMAND Widget_tests)
