Use the Widget lib in HelloWorld

--- a/HelloWorld/CMakeLists.txt
+++ b/HelloWorld/CMakeLists.txt
@@ -3,7 +3,7 @@ set(SOURCES HelloWorld.cpp)
 
 add_executable(HelloWorld ${SOURCES})
 
-target_link_libraries(HelloWorld project_warnings Message)
+target_link_libraries(HelloWorld project_warnings Message Widget)
 
 target_include_directories(HelloWorld PUBLIC "${PROJECT_BINARY_DIR}")
 
