--- a/HelloWorld/CMakeLists.txt
+++ b/HelloWorld/CMakeLists.txt
@@ -2,6 +2,7 @@ add_executable(HelloWorld main.cpp)
 
 target_link_libraries(HelloWorld project_warnings Message Widget rust_example)
 
+# Include path for version.h
 target_include_directories(HelloWorld PUBLIC "${PROJECT_BINARY_DIR}")
 
 install(TARGETS HelloWorld DESTINATION bin)
