--- a/HelloWorld/CMakeLists.txt
+++ b/HelloWorld/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_executable(HelloWorld main.cpp)
 
-target_link_libraries(HelloWorld project_warnings Message Widget rust_example)
+target_link_libraries(HelloWorld PRIVATE project_warnings Message Widget rust_example)
 
 # Include path for version.h
-target_include_directories(HelloWorld PUBLIC "${PROJECT_BINARY_DIR}")
+target_include_directories(HelloWorld PRIVATE "${PROJECT_BINARY_DIR}")
 
 install(TARGETS HelloWorld DESTINATION bin)
