--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,25 +15,15 @@ add_library(project_warnings INTERFACE)
 include(cmake/CompilerWarnings.cmake)
 set_project_warnings(project_warnings)
 
-include(FetchContent)
-
-FetchContent_Declare(
-  Corrosion
-  GIT_REPOSITORY https://github.com/AndrewGaspar/corrosion.git
-  GIT_TAG origin/master
-)
-
-FetchContent_MakeAvailable(Corrosion)
-
 configure_file(Version.in Version.h)
 install(FILES "${PROJECT_BINARY_DIR}/Config.h" DESTINATION include)
 
 enable_testing()
 
-corrosion_import_crate(MANIFEST_PATH rust-lib/Cargo.toml)
-
 add_subdirectory(HelloWorld)
 add_subdirectory(Message)
 add_subdirectory(Widget)
+
+add_subdirectory(Rust)
 
 add_subdirectory(external)
