Add CMakeLists.txt to Rust lib directory

--- a/Rust/CMakeLists.txt
+++ b/Rust/CMakeLists.txt
@@ -4,6 +4,5 @@ FetchContent_Declare(
         GIT_REPOSITORY https://github.com/AndrewGaspar/corrosion.git
         GIT_TAG origin/master
 )
-FetchContent_MakeAvailable(Corrosion)
 
-corrosion_import_crate(MANIFEST_PATH rust-lib/Cargo.toml)
+add_subdirectory(rust-lib)
