Rename Rust lib in snake_case convention

--- a/HelloWorld/CMakeLists.txt
+++ b/HelloWorld/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_executable(HelloWorld main.cpp)
 
-target_link_libraries(HelloWorld PRIVATE project_warnings Message Widget rust_example)
+target_link_libraries(HelloWorld PRIVATE project_warnings Message Widget hello_from_rust)
 
 # Include path for version.h
 target_include_directories(HelloWorld PRIVATE "${PROJECT_BINARY_DIR}")
