Apply cmake-format

--- a/Rust/CMakeLists.txt
+++ b/Rust/CMakeLists.txt
@@ -1,8 +1,7 @@
 include(FetchContent)
 FetchContent_Declare(
-        Corrosion
-        GIT_REPOSITORY https://github.com/AndrewGaspar/corrosion.git
-        GIT_TAG origin/master
-)
+  Corrosion
+  GIT_REPOSITORY https://github.com/AndrewGaspar/corrosion.git
+  origin/master)
 
 add_subdirectory(hello_from_rust)
