Uses installed Corrosion package when available
This could be configured to detect this automatically

--- a/Rust/hello_from_rust/CMakeLists.txt
+++ b/Rust/hello_from_rust/CMakeLists.txt
@@ -1,5 +1,8 @@
-FetchContent_MakeAvailable(Corrosion)
-
+if(CORROSION_INSTALLED)
+  find_package(Corrosion REQUIRED)
+else()
+  FetchContent_MakeAvailable(Corrosion)
+endif()
 corrosion_import_crate(MANIFEST_PATH Cargo.toml)
 
 # Corrosion doesn't support CTest yet This block assumes cargo is in the path
